# sym

./: .gitignore  AGENT_CONTEXT.md  LICENSE  MANIFEST.in  Makefile  README.md  check_pytest.py  context.md  generate_diagram.py  generate_diagram_one.py  hello.yml  publish.py  publish.sh  pyproject.toml  pytest.ini  replace_mmd_encodings.py  replace_outside_mermaid.py
.github/workflows/: ci.yml  publish_package.yml  publish_test_package.yml
docs/: 1_quick_guide.md  2_introduction.md  3_advanced_tutorial.md  4_api_documentation.md  GLOSSARY.md  GOOD_TO_KNOW.md  README.md  TOC_TODO.md  TODO.md  architecture.md  bio.md  business_overview.md  changelog.md  conversion_to_and_from.md  directory_validation.md  directory_validation_lr.mmd  directory_validation_tb.mmd  docs_DATE_FUNC_COMMON.md  further_readings.md  idohatarozok.md  methods.md  module_paths_diagram.md  namespace_dsl.md  namespace_dsl_spec.md  notations.md  plan.md  relations_implementation_plan.md  semicondutor_industry.md  software_architecture.md  user_info_journey.md
docs/cookbook/: 0_table_of_contents.md  2_scheduling_jobs.md
docs/development/: architecture.md  conversion_to_and_from.md  directory_validation_tb.mmd  good_to_know.md  module_paths_diagram.md  namespace_dsl_spec.md  notations.md  package_publish.md  structure_overview.md
docs/guides/: 1_quick_guide.md  2_introduction.md  3_advanced_tutorial.md  3_tutorial.md  4_schedule_and_batch_processing_api_documentation.md
docs/measurements/: benchmark_datetime_libs.py  benchmark_datetime_libs2.py
docs/package/: README.md  encode.py  readme.css  start.sh
docs/paper/: A_Principled_Framework.md  paper.md
docs/pypi_org/: start.sh  update.py
docs/scientific_paper/: A_Principled_Framework.justified.md  A_Principled_Framework_unjustified.md
docs/user_manual/: 1_introduction.md  2_ic_product_lifecycle.md  3_advanced_applications.md  4_mastering_symbol.md  5_learning_suggestions.md  index.md
scripts/: generate_code_inventory.py  justify.py  justify_usage.md  process_mermaid_diagrams.py  replace_fill_lighten.py  replace_mmd_encodings.py
scripts/security/: bandit_report_20250709_201519.json  bandit_report_20250709_201632.json  run_bandit.py
sym/: __init__.py  config.py
sym/builtins/: __init__.py  avl_tree.py  collections.py  index.py  red_black_tree.py  time_dim.py  visual.py
sym/core/: base_sym.py  batch_processing.py  lazy_sym.py  maturing.py  mixinability.py  schedule.py  sym.py
sym/utils/: memory.py
symb/: __init__.py  config.py
symb/builtin/: collections.py  index.py  red_black_tree.py  visual.py
symb/builtins/: __init__.py  index.py  visual.py
symb/core/: base_symb.py  batch_processing.py  graph_traversal.py  maturing.py  mixinability.py  schedule.py  symb.py  symbol.py  symbol_namespace.py
symb/utils/: memory.py
symbol/: __init__.py  config.py
symbol/builtins/: __init__.py  avl_tree.py  collections.py  datetime.py  index.py  indexing.py  path.py  red_black_tree.py  time_dim.py  timeline.py  visual.py
symbol/core/: base_symbol.py  batch_processing.py  graph.py  lazy.py  lazy_symbol.py  maturing.py  mixin_validator.py  mixinability.py  pluggability.py  protocols.py  schedule.py  symbol.py  symbolable.py  time_arithmetics.py
symbol/utils/: memory.py
tests/: config.feature  conftest.py  test_config.py  test_imports.py  test_yaml_serialization.py
tests/builtins/: collections.feature  datetime.feature  index.feature  path.feature  test_avl_tree.py  test_collections.py  test_datetime.py  test_index.py  test_path.py  test_red_black_tree.py  test_time_dim.py  test_visual.py  time_dim.feature  visual.feature
tests/core/: mixinability.feature  schedule.feature  sym_creation.feature  sym_happy_path.feature  symbol_creation.feature  symbol_happy_path.feature  test_async_schedule.py  test_base_symbol.py  test_batch_processing.py  test_lazy_symbol.py  test_maturing.py  test_mixinability.py  test_schedule.py  test_symbol.py  (+5 more)
(+67 files in other folders)
