[project]
name = "symb"
version = "0.0.2"
description = "A Lazy, Graph-Oriented, Immutable Symbol System Concept for Domain-Specific Abstraction"
dependencies = [
    "orjson>=3.10.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "libcst>=1.2.0",
    "ipython>=8.18.1",
    "typer>=0.12.3",
    "croniter>=2.0.1",
    "sniffio",
    "PyYAML",
    "pytz",
    "python-dateutil",
    "toml",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
symb = "symb.bin.scheduler:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["symb"]

[tool.setuptools.package-data]
"symb" = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-anyio",
    "mypy",
    "pre-commit",
    "ruff",
    "sniffio",
]
visual = [
    "graphviz>=0.20.0",
]
full = [
    "symb[visual]",
]
