[project]
name = "symb"
version = "0.0.5"
description = "A Lazy, Graph-Oriented, Immutable Symbol System Concept for Domain-Specific Abstraction"
dependencies = [
    "orjson>=3.10.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "libcst>=1.2.0",
    "ipython>=8.18.1",
    "typer>=0.12.3",
    "croniter>=2.0.1",
    "sniffio",
    "PyYAML",
    "pytz",
    "python-dateutil",
    "toml",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
symb = "symb.bin.scheduler:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["symb"]

[tool.uv]
name = "symb"
version = "0.0.5"
description = "A Lazy, Graph-Oriented, Immutable Symbol System Concept for Domain-Specific Abstraction"
authors = ["Miklos Beky <miklos.beky@gmail.com>"]

# You can specify the README file for the long description
long_description = "file: README.md"  # Path to the README file
long_description_content_type = "text/markdown"  # Can be "text/x-rst" for reST


[tool.setuptools.package-data]
"symb" = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-anyio",
    "mypy",
    "pre-commit",
    "ruff",
    "sniffio",
]
visual = [
    "graphviz>=0.20.0",
]
full = [
    "symb[visual]",
]
