[project]
name = "symb"
version = "0.0.7-beta-1"
description = "A Lazy, Graph-Oriented, Immutable Symbol System Concept for Domain-Specific Abstraction"
dependencies = [
    "orjson>=3.10.0",
    "anyio>=4.4.0",
    "libcst>=1.2.0",
    "ipython>=8.18.1",
    "typer>=0.12.3",
    "croniter>=2.0.1",
    "sniffio",
    "PyYAML",
    "pytz",
    "python-dateutil",
    "toml",
]
requires-python = ">=3.8"
readme="docs/pypi_org/README.md"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# New fields for homepage, source repository, and author
homepage = "https://github.com/ikko/symb"
source = "https://github.com/ikko/symb"
author = "Miklos Beky <miklos.beky@gmail.com>"


[project.scripts]
symb = "symb.bin.scheduler:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["symb"]

[tool.setuptools.package-data]
"symb" = ["py.typed"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-anyio",
    "mypy",
    "pre-commit",
    "sniffio",
]
visual = [
    "graphviz>=0.20.0",
]
full = [
    "symb[visual]",
]
